--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,3 +39,12 @@ jobs:
         run: git tag -l | grep v$(make version) || make publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Godot Asset Lib
+        uses: deep-entertainment/godot-asset-lib-action@v0.5.0
+        with:
+          username: alextrevisan
+          password: ${{ secrets.GODOT_ASSET_STORE_PASSWORD }}
+          assetId: 2212
+          approveDirectly: "true"
+          assetTemplate: .github/asset-template.json.hb
