--- a/.github/workflows/godot-asset-library.yaml
+++ b/.github/workflows/godot-asset-library.yaml
@@ -2,6 +2,9 @@ on:
   release:
     types:
       - published
+  push:
+    branches: [ master ]
+  workflow_dispatch:
 
 name: Push to Godot Asset Library
 
