--- a/.github/workflows/godot-asset-library.yaml
+++ b/.github/workflows/godot-asset-library.yaml
@@ -1,7 +1,9 @@
 on:
   release:
-    types:
-      - published
+    types: [created, published]
+  push:
+    branches: [ master ]
+  workflow_dispatch:
 
 name: Push to Godot Asset Library
 
