--- a/.github/workflows/test_env.yaml
+++ b/.github/workflows/test_env.yaml
@@ -4,9 +4,14 @@ on:
   push:
     tags:
       - 'CP/v[0-9]+.[0-9]+.[0-9]+'
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  github-example-tags:
+  # This workflow contains a single job called "release"
+  release:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -14,4 +19,4 @@ jobs:
       - name: Configure user
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-         echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
