--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: GitHub Tag Name example
         run: |
-          git checkout tags/v$(make version)
-          echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
           echo "Tag name from github.ref_name: ${{  github.ref_name }}"
-          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+          echo "Name: ${{ github.event.release.name }}"
