--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,17 +25,11 @@ jobs:
         run: git tag -l | grep v$(make version) || make publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: GitHub Tag Name example
-        run: |
-          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
-          echo "Name: ${{ github.event.release.name }}"
-  publish:
+  after-release:
     needs: release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - name: GitHub Tag Name example
         run: |
-          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
-          echo "Name: ${{ github.event.release.name }}"
+          echo "Name: ${{ github.event.base_ref }}"
       
