--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,15 +42,11 @@ jobs:
           LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo "latest_tag=$LATEST_TAG" >> $GITHUB_ENV
 
-      - name: Echo the latest release tag
-        run: |
-          echo "Name: ${{ env.latest_tag }}"
-      - name: Godot Asset Lib
+      - name: Push to Godot Asset Library
         uses: wjt/godot-asset-lib-action@9cce3792b504bec69eb06b852b008d095e372f56
         with:
           username: ${{ secrets.GODOT_ASSET_LIBRARY_USERNAME }}
           password: ${{ secrets.GODOT_ASSET_STORE_PASSWORD }}
           assetId: 2212
-          approveDirectly: "true"
           assetTemplate: .github/asset-template.json.hb
       
