New refactored version using separated spritesheets

--- a/addons/LPCAnimatedSprite/plugin.cfg
+++ b/addons/LPCAnimatedSprite/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="LPCAnimatedSprite"
-description=""
+description="A node for handling LPC (Liberated Pixel Cup) style character animations with support for individual animation textures"
 author="Alexandro Trevisan"
-version="4.2.2.5"
+version="4.4.0.1"
 script="LPCAnimatedSprite.gd"
