--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 export.cfg
 export_presets.cfg
 *.import
+*.vscode
 
 # Imported translations (automatically generated from CSV files)
 *.translation
